use Math.clamp over MathUtil.clip